Upgraded bootstrap to 3.0.1, rails to version 4. Added bootstrap-theme to make it look less flat.  Extracted javascript into individual files to make it easier to understand.  Todo: re-add alert modal (was used by error's from AJAX) and ajax processing code

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -9,10 +9,13 @@
  * compiled file, but it's generally better to create a new file per style scope.
  *
  *= require_self
+ *= require font-awesome
  *= require_tree .
  */
 
 @import 'twitter/bootstrap/variables';
+@import 'twitter/bootstrap';
+@import 'twitter/bootstrap/theme';
 
 a.disabled {
   // Custom case for link with no btn classes being disabled
@@ -26,9 +29,6 @@ a.disabled [data-tooltip],
 a[data-tooltip].disabled {
   pointer-events: auto;
 }
-
-@import 'font-awesome';
-@import "twitter/bootstrap";
 
 body {
   padding-top: 90px;
